src/main/gen/dev/huyaro/lang/parser/DtoParser.java
// This is a generated file. Not intended for manual editing.
package dev.huyaro.lang.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static dev.huyaro.lang.psi.DtoTypes.*;
import static dev.huyaro.lang.parser.DtoParserUtil.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class DtoParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return dtoFile(b, l + 1);
  }

  /* ********************************************************** */
  // 'true' | 'false'
  public static boolean BooleanLiteral(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BooleanLiteral")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BOOLEAN_LITERAL, "<boolean literal>");
    r = consumeToken(b, "true");
    if (!r) r = consumeToken(b, "false");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // Id
  public static boolean Identifier(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Identifier")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ID);
    exit_section_(b, m, IDENTIFIER, r);
    return r;
  }

  /* ********************************************************** */
  // aliasPattern '{' aliasGroupProp* '}'
  public static boolean aliasGroup(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "aliasGroup")) return false;
    if (!nextTokenIs(b, KEY_AS)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = aliasPattern(b, l + 1);
    r = r && consumeToken(b, LBRACE);
    r = r && aliasGroup_2(b, l + 1);
    r = r && consumeToken(b, RBRACE);
    exit_section_(b, m, ALIAS_GROUP, r);
    return r;
  }

  // aliasGroupProp*
  private static boolean aliasGroup_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "aliasGroup_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!aliasGroupProp(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "aliasGroup_2", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // allScalars | positiveProp
  public static boolean aliasGroupProp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "aliasGroupProp")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ALIAS_GROUP_PROP, "<alias group prop>");
    r = allScalars(b, l + 1);
    if (!r) r = positiveProp(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'as' '(' '^'? Identifier? '$'? '->' Identifier? ')'
  public static boolean aliasPattern(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "aliasPattern")) return false;
    if (!nextTokenIs(b, KEY_AS)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, KEY_AS, LPAREN);
    r = r && aliasPattern_2(b, l + 1);
    r = r && aliasPattern_3(b, l + 1);
    r = r && aliasPattern_4(b, l + 1);
    r = r && consumeToken(b, RIGHT_ARROW);
    r = r && aliasPattern_6(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    exit_section_(b, m, ALIAS_PATTERN, r);
    return r;
  }

  // '^'?
  private static boolean aliasPattern_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "aliasPattern_2")) return false;
    consumeToken(b, CARET);
    return true;
  }

  // Identifier?
  private static boolean aliasPattern_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "aliasPattern_3")) return false;
    Identifier(b, l + 1);
    return true;
  }

  // '$'?
  private static boolean aliasPattern_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "aliasPattern_4")) return false;
    consumeToken(b, DOLOR);
    return true;
  }

  // Identifier?
  private static boolean aliasPattern_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "aliasPattern_6")) return false;
    Identifier(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // '#' Identifier
  //     ('(' qualifiedName (',' qualifiedName)* ')')?
  //     '?'?
  public static boolean allScalars(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "allScalars")) return false;
    if (!nextTokenIs(b, HASH)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, HASH);
    r = r && Identifier(b, l + 1);
    r = r && allScalars_2(b, l + 1);
    r = r && allScalars_3(b, l + 1);
    exit_section_(b, m, ALL_SCALARS, r);
    return r;
  }

  // ('(' qualifiedName (',' qualifiedName)* ')')?
  private static boolean allScalars_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "allScalars_2")) return false;
    allScalars_2_0(b, l + 1);
    return true;
  }

  // '(' qualifiedName (',' qualifiedName)* ')'
  private static boolean allScalars_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "allScalars_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LPAREN);
    r = r && qualifiedName(b, l + 1);
    r = r && allScalars_2_0_2(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    exit_section_(b, m, null, r);
    return r;
  }

  // (',' qualifiedName)*
  private static boolean allScalars_2_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "allScalars_2_0_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!allScalars_2_0_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "allScalars_2_0_2", c)) break;
    }
    return true;
  }

  // ',' qualifiedName
  private static boolean allScalars_2_0_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "allScalars_2_0_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && qualifiedName(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // '?'?
  private static boolean allScalars_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "allScalars_3")) return false;
    consumeToken(b, OPTNULL);
    return true;
  }

  /* ********************************************************** */
  // '@' annotationName ('(' annotationArguments? ')')?
  public static boolean annotation(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation")) return false;
    if (!nextTokenIs(b, AT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, AT);
    r = r && annotationName(b, l + 1);
    r = r && annotation_2(b, l + 1);
    exit_section_(b, m, ANNOTATION, r);
    return r;
  }

  // ('(' annotationArguments? ')')?
  private static boolean annotation_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation_2")) return false;
    annotation_2_0(b, l + 1);
    return true;
  }

  // '(' annotationArguments? ')'
  private static boolean annotation_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LPAREN);
    r = r && annotation_2_0_1(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    exit_section_(b, m, null, r);
    return r;
  }

  // annotationArguments?
  private static boolean annotation_2_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotation_2_0_1")) return false;
    annotationArguments(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // annotationValue (',' annotationNamedArgument)*
  //     | annotationNamedArgument (',' annotationNamedArgument)*
  public static boolean annotationArguments(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotationArguments")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ANNOTATION_ARGUMENTS, "<annotation arguments>");
    r = annotationArguments_0(b, l + 1);
    if (!r) r = annotationArguments_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // annotationValue (',' annotationNamedArgument)*
  private static boolean annotationArguments_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotationArguments_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = annotationValue(b, l + 1);
    r = r && annotationArguments_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (',' annotationNamedArgument)*
  private static boolean annotationArguments_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotationArguments_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!annotationArguments_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "annotationArguments_0_1", c)) break;
    }
    return true;
  }

  // ',' annotationNamedArgument
  private static boolean annotationArguments_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotationArguments_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && annotationNamedArgument(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // annotationNamedArgument (',' annotationNamedArgument)*
  private static boolean annotationArguments_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotationArguments_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = annotationNamedArgument(b, l + 1);
    r = r && annotationArguments_1_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (',' annotationNamedArgument)*
  private static boolean annotationArguments_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotationArguments_1_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!annotationArguments_1_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "annotationArguments_1_1", c)) break;
    }
    return true;
  }

  // ',' annotationNamedArgument
  private static boolean annotationArguments_1_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotationArguments_1_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && annotationNamedArgument(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // '[' annotationSingleValue (',' annotationSingleValue)* ']'
  //     | '{' annotationSingleValue (',' annotationSingleValue)* '}'
  public static boolean annotationArrayValue(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotationArrayValue")) return false;
    if (!nextTokenIs(b, "<annotation array value>", LBRACE, LBRACK)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ANNOTATION_ARRAY_VALUE, "<annotation array value>");
    r = annotationArrayValue_0(b, l + 1);
    if (!r) r = annotationArrayValue_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // '[' annotationSingleValue (',' annotationSingleValue)* ']'
  private static boolean annotationArrayValue_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotationArrayValue_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LBRACK);
    r = r && annotationSingleValue(b, l + 1);
    r = r && annotationArrayValue_0_2(b, l + 1);
    r = r && consumeToken(b, RBRACK);
    exit_section_(b, m, null, r);
    return r;
  }

  // (',' annotationSingleValue)*
  private static boolean annotationArrayValue_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotationArrayValue_0_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!annotationArrayValue_0_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "annotationArrayValue_0_2", c)) break;
    }
    return true;
  }

  // ',' annotationSingleValue
  private static boolean annotationArrayValue_0_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotationArrayValue_0_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && annotationSingleValue(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // '{' annotationSingleValue (',' annotationSingleValue)* '}'
  private static boolean annotationArrayValue_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotationArrayValue_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LBRACE);
    r = r && annotationSingleValue(b, l + 1);
    r = r && annotationArrayValue_1_2(b, l + 1);
    r = r && consumeToken(b, RBRACE);
    exit_section_(b, m, null, r);
    return r;
  }

  // (',' annotationSingleValue)*
  private static boolean annotationArrayValue_1_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotationArrayValue_1_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!annotationArrayValue_1_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "annotationArrayValue_1_2", c)) break;
    }
    return true;
  }

  // ',' annotationSingleValue
  private static boolean annotationArrayValue_1_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotationArrayValue_1_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && annotationSingleValue(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // Identifier ('.' Identifier)*
  public static boolean annotationName(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotationName")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Identifier(b, l + 1);
    r = r && annotationName_1(b, l + 1);
    exit_section_(b, m, ANNOTATION_NAME, r);
    return r;
  }

  // ('.' Identifier)*
  private static boolean annotationName_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotationName_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!annotationName_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "annotationName_1", c)) break;
    }
    return true;
  }

  // '.' Identifier
  private static boolean annotationName_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotationName_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, DOT);
    r = r && Identifier(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // Identifier '=' annotationValue
  public static boolean annotationNamedArgument(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotationNamedArgument")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Identifier(b, l + 1);
    r = r && consumeToken(b, EQUAL);
    r = r && annotationValue(b, l + 1);
    exit_section_(b, m, ANNOTATION_NAMED_ARGUMENT, r);
    return r;
  }

  /* ********************************************************** */
  // BooleanLiteral
  //     | Number
  //     | String
  // //    | qualifiedName  //TODO 放开后注解参数的=会有问题,不放开的话参数值不能为枚举
  //     | annotation
  //     | nestedAnnotation
  public static boolean annotationSingleValue(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotationSingleValue")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ANNOTATION_SINGLE_VALUE, "<annotation single value>");
    r = BooleanLiteral(b, l + 1);
    if (!r) r = consumeToken(b, NUMBER);
    if (!r) r = consumeToken(b, STRING);
    if (!r) r = annotation(b, l + 1);
    if (!r) r = nestedAnnotation(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // annotationSingleValue
  //     | annotationArrayValue
  public static boolean annotationValue(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annotationValue")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ANNOTATION_VALUE, "<annotation value>");
    r = annotationSingleValue(b, l + 1);
    if (!r) r = annotationArrayValue(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // '{' (explicitProp (','|';')?)* '}'
  public static boolean dtoBody(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dtoBody")) return false;
    if (!nextTokenIs(b, LBRACE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LBRACE);
    r = r && dtoBody_1(b, l + 1);
    r = r && consumeToken(b, RBRACE);
    exit_section_(b, m, DTO_BODY, r);
    return r;
  }

  // (explicitProp (','|';')?)*
  private static boolean dtoBody_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dtoBody_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!dtoBody_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "dtoBody_1", c)) break;
    }
    return true;
  }

  // explicitProp (','|';')?
  private static boolean dtoBody_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dtoBody_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = explicitProp(b, l + 1);
    r = r && dtoBody_1_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (','|';')?
  private static boolean dtoBody_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dtoBody_1_0_1")) return false;
    dtoBody_1_0_1_0(b, l + 1);
    return true;
  }

  // ','|';'
  private static boolean dtoBody_1_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dtoBody_1_0_1_0")) return false;
    boolean r;
    r = consumeToken(b, COMMA);
    if (!r) r = consumeToken(b, SEMICOLON);
    return r;
  }

  /* ********************************************************** */
  // importStatement* dtoType*
  static boolean dtoFile(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dtoFile")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = dtoFile_0(b, l + 1);
    r = r && dtoFile_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // importStatement*
  private static boolean dtoFile_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dtoFile_0")) return false;
    while (true) {
      int c = current_position_(b);
      if (!importStatement(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "dtoFile_0", c)) break;
    }
    return true;
  }

  // dtoType*
  private static boolean dtoFile_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dtoFile_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!dtoType(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "dtoFile_1", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // modifier* qualifiedName
  //     (':' qualifiedName (',' qualifiedName)*)?
  //     dtoBody
  public static boolean dtoType(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dtoType")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DTO_TYPE, "<dto type>");
    r = dtoType_0(b, l + 1);
    r = r && qualifiedName(b, l + 1);
    r = r && dtoType_2(b, l + 1);
    r = r && dtoBody(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // modifier*
  private static boolean dtoType_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dtoType_0")) return false;
    while (true) {
      int c = current_position_(b);
      if (!modifier(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "dtoType_0", c)) break;
    }
    return true;
  }

  // (':' qualifiedName (',' qualifiedName)*)?
  private static boolean dtoType_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dtoType_2")) return false;
    dtoType_2_0(b, l + 1);
    return true;
  }

  // ':' qualifiedName (',' qualifiedName)*
  private static boolean dtoType_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dtoType_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COLON);
    r = r && qualifiedName(b, l + 1);
    r = r && dtoType_2_0_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (',' qualifiedName)*
  private static boolean dtoType_2_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dtoType_2_0_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!dtoType_2_0_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "dtoType_2_0_2", c)) break;
    }
    return true;
  }

  // ',' qualifiedName
  private static boolean dtoType_2_0_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dtoType_2_0_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && qualifiedName(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // allScalars
  //     | aliasGroup
  //     | positiveProp
  //     | negativeProp
  //     | userProp
  public static boolean explicitProp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "explicitProp")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXPLICIT_PROP, "<explicit prop>");
    r = allScalars(b, l + 1);
    if (!r) r = aliasGroup(b, l + 1);
    if (!r) r = positiveProp(b, l + 1);
    if (!r) r = negativeProp(b, l + 1);
    if (!r) r = userProp(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // '*' | Identifier?
  public static boolean genericArgument(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "genericArgument")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, GENERIC_ARGUMENT, "<generic argument>");
    r = consumeToken(b, STAR);
    if (!r) r = genericArgument_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // Identifier?
  private static boolean genericArgument_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "genericArgument_1")) return false;
    Identifier(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // 'import' Identifier ('.' Identifier)*
  //     (
  //     '.' '{' importedType (',' importedType)* '}'
  //     | 'as' Identifier
  //     )?
  public static boolean importStatement(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "importStatement")) return false;
    if (!nextTokenIs(b, IMPORT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, IMPORT);
    r = r && Identifier(b, l + 1);
    r = r && importStatement_2(b, l + 1);
    r = r && importStatement_3(b, l + 1);
    exit_section_(b, m, IMPORT_STATEMENT, r);
    return r;
  }

  // ('.' Identifier)*
  private static boolean importStatement_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "importStatement_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!importStatement_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "importStatement_2", c)) break;
    }
    return true;
  }

  // '.' Identifier
  private static boolean importStatement_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "importStatement_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, DOT);
    r = r && Identifier(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (
  //     '.' '{' importedType (',' importedType)* '}'
  //     | 'as' Identifier
  //     )?
  private static boolean importStatement_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "importStatement_3")) return false;
    importStatement_3_0(b, l + 1);
    return true;
  }

  // '.' '{' importedType (',' importedType)* '}'
  //     | 'as' Identifier
  private static boolean importStatement_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "importStatement_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = importStatement_3_0_0(b, l + 1);
    if (!r) r = importStatement_3_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // '.' '{' importedType (',' importedType)* '}'
  private static boolean importStatement_3_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "importStatement_3_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, DOT, LBRACE);
    r = r && importedType(b, l + 1);
    r = r && importStatement_3_0_0_3(b, l + 1);
    r = r && consumeToken(b, RBRACE);
    exit_section_(b, m, null, r);
    return r;
  }

  // (',' importedType)*
  private static boolean importStatement_3_0_0_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "importStatement_3_0_0_3")) return false;
    while (true) {
      int c = current_position_(b);
      if (!importStatement_3_0_0_3_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "importStatement_3_0_0_3", c)) break;
    }
    return true;
  }

  // ',' importedType
  private static boolean importStatement_3_0_0_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "importStatement_3_0_0_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && importedType(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // 'as' Identifier
  private static boolean importStatement_3_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "importStatement_3_0_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, KEY_AS);
    r = r && Identifier(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // Identifier ('as' Identifier)?
  public static boolean importedType(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "importedType")) return false;
    if (!nextTokenIs(b, ID)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Identifier(b, l + 1);
    r = r && importedType_1(b, l + 1);
    exit_section_(b, m, IMPORTED_TYPE, r);
    return r;
  }

  // ('as' Identifier)?
  private static boolean importedType_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "importedType_1")) return false;
    importedType_1_0(b, l + 1);
    return true;
  }
